Import of ZOFFIX/App-ZofCMS-Plugin-PreferentialOrder-0.0102 from CPAN.
gitpan-cpan-distribution: App-ZofCMS-Plugin-PreferentialOrder
gitpan-cpan-version:      0.0102
gitpan-cpan-path:         ZOFFIX/App-ZofCMS-Plugin-PreferentialOrder-0.0102.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for App-ZofCMS-Plugin-PreferentialOrder
 
+0.0102  December 22, 2010
+        Removed broken error check
+
 0.0101  December 22, 2010
         First version, released on an unsuspecting world.
 
