Import of ZOFFIX/App-ZofCMS-Plugin-PreferentialOrder-0.0104 from CPAN.
gitpan-cpan-distribution: App-ZofCMS-Plugin-PreferentialOrder
gitpan-cpan-version:      0.0104
gitpan-cpan-path:         ZOFFIX/App-ZofCMS-Plugin-PreferentialOrder-0.0104.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,12 +1,15 @@
 Revision history for App-ZofCMS-Plugin-PreferentialOrder
 
-0.0103  December 26, 2010
-        Fixed production of invalid empty HTML lists when enabled
-        or disabled lists do not have any elements
+0.0104  2013-11-09
+        - Minor fixes to comply with specs and Kwalitee game
 
-0.0102  December 22, 2010
-        Removed broken error check
+0.0103  2010-12-26
+        - Fixed production of invalid empty HTML lists when enabled
+          or disabled lists do not have any elements
 
-0.0101  December 22, 2010
-        First version, released on an unsuspecting world.
+0.0102  2010-12-22
+        - Removed broken error check
+
+0.0101  2010-12-22
+        - First version, released on an unsuspecting world.
 
